--- a/site/templates/twig/items/itm/misc/page.twig
+++ b/site/templates/twig/items/itm/misc/page.twig
@@ -12,8 +12,22 @@
 			{% include 'items/itm/misc/form/misc/form.twig' %}
 		</div>
 		<hr>
-
 		{% include 'items/itm/misc/form/hazmat/hazmat.twig' %}
+
+		<div class="d-flex justify-content-between align-items-center">
+			{#
+				Only show Edit Actions if the Item is
+				1. Locked for editing by the User
+			#}
+			{% if itm.recordlocker.userHasLocked(item.itemid) %}
+				<button class="btn btn-success save-itm-misc">
+					<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
+				</button>
+			{% endif %}
+			<a href="{{ page.itmUrl(item.itemid) }}" class="btn btn-warning">
+				<i class="fa fa-times" aria-hidden="true"></i> Close
+			</a>
+		</div>
 	</div>
 {% endblock %}
 
