--- a/site/templates/twig/items/itm/misc/form/hazmat/js.twig
+++ b/site/templates/twig/items/itm/misc/form/hazmat/js.twig
@@ -1,8 +1,6 @@
 {% include 'items/itm/misc/form/hazmat/js/classes.js.twig' %}
 
 $(function() {
-	var form_hazmat = $('#itm-hazmat-form');
-	var modal_ajax  = $('#ajax-modal');
 	var formHazmat  = HazmatForm.getInstance();
 
 /* =============================================================
@@ -68,47 +66,11 @@ $(function() {
 			dot1: "Enter a DOT Ship Name"
 		},
 		submitHandler: function(form) {
-			form.submit();
+			// form.submit();
 		}
 	});
 
-/* =============================================================
-	Event Functions
-============================================================= */
-
-/* =============================================================
-	AJAX Lookup Modal Functions
-============================================================= */
-	modal_ajax.on('show.bs.modal', function (event) {
-		var button = $(event.relatedTarget); // Button that triggered the modal
-		var modal = $(this);
-		var url = button.data('lookupurl');
-
-		modal.find('.modal-title').text(button.attr('title'));
-		modal.resizeModal('xl');
-		modal.find('.modal-body').loadin(url, function() {});
-	});
-
-
-	$("body").on('submit', '#ajax-modal form', function(e) {
-		e.preventDefault();
-		var form = $(this);
-		var query = form.serialize();
-		var action = form.attr('action');
-		var search = form.find('input[name=q]').val();
-		var url = action + '?' + query;
-		form.closest('.modal').find('.modal-title').text('Searching for ' + search);
-		form.closest('.modal').find('.modal-body').loadin(url, function() {});
-	});
-
-	$("body").on('click', '#ajax-modal .paginator-link', function(e) {
-		e.preventDefault();
-		var href = $(this).attr('href');
-		modal_ajax.find('.modal-body').load(href);
-	});
-
-/* =============================================================
-	AJAX Request Functions
-============================================================= */
+	var validator = formHazmat.form.validate();
+	validator.form();
 
 });
