--- a/site/templates/twig/items/itm/misc/js.twig
+++ b/site/templates/twig/items/itm/misc/js.twig
@@ -2,6 +2,7 @@
 {% include 'items/itm/misc/form/hazmat/js.twig' %}
 
 $(function() {
+	var modalAjax = $('#ajax-modal');
 
 /* =============================================================
 	Event Changes
@@ -10,5 +11,39 @@ $(function() {
 		if ($('.response-alert').length) {
 			$('.response-alert').remove();
 		}
+	});
+
+/* =============================================================
+	AJAX Lookup Modal Functions
+============================================================= */
+	modalAjax.on('show.bs.modal', function (event) {
+		var button = $(event.relatedTarget); // Button that triggered the modal
+		var modal  = $(this);
+		var url    = button.data('lookupurl');
+		modal.attr('data-input', button.data('input'));
+
+		modal.find('.modal-title').text(button.attr('title'));
+		modal.resizeModal('xl');
+		modal.find('.modal-body').loadin(url, function() {});
+	});
+
+
+	$("body").on('submit', '#ajax-modal form', function(e) {
+		e.preventDefault();
+		var form = $(this);
+		var query = form.serialize();
+		var action = form.attr('action');
+		var search = form.find('input[name=q]').val();
+		var url = action + '?' + query;
+		form.closest('.modal').find('.modal-title').text('Searching for ' + search);
+		form.closest('.modal').find('.modal-body').loadin(url, function() {});
+	});
+
+	$("body").on('click', '#ajax-modal .paginator-link', function(e) {
+		e.preventDefault();
+		var button = $(this);
+		var href = button.attr('href');
+		var modal = button.closest('.modal');
+		modal.find('.modal-body').load(href);
 	});
 });
