Add Unsaved Alert functionality

--- a/site/templates/twig/items/itm/misc/form/hazmat/js/classes/Form.js.twig
+++ b/site/templates/twig/items/itm/misc/form/hazmat/js/classes/Form.js.twig
@@ -13,5 +13,10 @@ class HazmatForm {
 		this.form = $('#' + this.id);
 		this.inputs = HazmatInputs.getInstance();
 		this.config = HazmatConfigs.getInstance();
+		this.formSerialized = this.form.serialize();
+	}
+
+	hasChanges() {
+		return this.formSerialized == this.form.serialize();
 	}
 }
