--- a/site/templates/twig/items/itm/misc/form/misc/js/classes/Form.js.twig
+++ b/site/templates/twig/items/itm/misc/form/misc/js/classes/Form.js.twig
@@ -12,5 +12,10 @@ class MiscForm {
 		this.id = 'itm-misc-form';
 		this.form = $('#' + this.id);
 		this.inputs = MiscInputs.getInstance();
+		this.formSerialized = this.form.serialize();
+	}
+
+	hasChanges() {
+		return this.formSerialized == this.form.serialize();
 	}
 }
