--- a/site/templates/twig/items/itm/misc/form/hazmat/js/classes/Form.js.twig
+++ b/site/templates/twig/items/itm/misc/form/hazmat/js/classes/Form.js.twig
@@ -17,6 +17,6 @@ class HazmatForm {
 	}
 
 	hasChanges() {
-		return this.formSerialized == this.form.serialize();
+		return this.formSerialized != this.form.serialize();
 	}
 }
