--- a/site/templates/twig/items/itm/misc/form/misc/js/classes/Form.js.twig
+++ b/site/templates/twig/items/itm/misc/form/misc/js/classes/Form.js.twig
@@ -16,6 +16,6 @@ class MiscForm {
 	}
 
 	hasChanges() {
-		return this.formSerialized == this.form.serialize();
+		return this.formSerialized != this.form.serialize();
 	}
 }
