FEAT: submit both forms with one command

--- a/site/templates/twig/items/itm/misc/form/misc/js.twig
+++ b/site/templates/twig/items/itm/misc/form/misc/js.twig
@@ -96,7 +96,7 @@ $(function() {
 		var button = $(this);
 		var code   = button.data('code');
 		var modal  = button.closest('.modal');
-		$(modal.attr('data-input')).val(code).change();
+		$(modal.attr('data-input')).val(code).change().keyup();
 		modal.modal('hide');
 	});
 
