--- a/site/templates/twig/items/itm/xrefs/substitutes/sub/form.twig
+++ b/site/templates/twig/items/itm/xrefs/substitutes/sub/form.twig
@@ -71,6 +71,7 @@
 			%}
 		</div>
 	</div>
+	<div class="p-5"></div>
 	<div class="d-flex justify-content-between align-items-center">
 		{#
 			Only show Edit Actions if the Item is
