--- a/site/templates/twig/items/itm/xrefs/substitutes/sub/form.twig
+++ b/site/templates/twig/items/itm/xrefs/substitutes/sub/form.twig
@@ -9,7 +9,7 @@
 
 <form action="{{ input.url() }}" class="mb-3" id="itm-substitute-form" method="POST">
 	<input type="hidden" name="action" value="update">
-	<input type="hidden" name="itemID" value="{{ sub.subitemid }}">
+	<input type="hidden" name="itemID" value="{{ sub.itemid }}">
 
 	<div class="row mb-3">
 		<div class="col-sm-3">
