--- a/site/templates/twig/items/itm/xrefs/substitutes/sub/form.twig
+++ b/site/templates/twig/items/itm/xrefs/substitutes/sub/form.twig
@@ -88,7 +88,7 @@
 				</a>
 			{% endif %}
 		{% endif %}
-		<a href="{{ page.subListUrl(item.itemid) }}" class="btn btn-warning">
+		<a href="{{ page.subListUrl(sub.itemid, sub.subitemid) }}" class="btn btn-warning">
 			<i class="fa fa-times" aria-hidden="true"></i> Close
 		</a>
 	</div>
