--- a/site/templates/twig/items/itm/xrefs/substitutes/sub/js.twig
+++ b/site/templates/twig/items/itm/xrefs/substitutes/sub/js.twig
@@ -1,7 +1,11 @@
+{% include 'items/itm/xrefs/substitutes/sub/js/classes.js.twig' %}
+
 $(function() {
 	var modalAjax = $('#ajax-modal');
-	var form      = $('#itm-substitute-form');
-	var alert     = Alerts.getInstance();
+
+	var formSub   = SubForm.getInstance();
+	var alert     = SubAlerts.getInstance();
+	var server    = SubRequests.getInstance();
 
 /* =============================================================
 	Event Changes
@@ -12,22 +16,53 @@ $(function() {
 		}
 	});
 
+	$("body").on('change', 'input[name=subitemID]', function(e) {
+		e.preventDefault();
+		var input  = $(this);
+		var inputs = formSub.inputs;
+		var sameItemids = inputs.itemid.val() === inputs.subitemid.val();
+
+		if (sameItemids) {
+			alert.sameItemid(inputs.itemid.val(), inputs.subitemid.val(), function(confirmed) {
+				inputs.subitemid.val('');
+				inputs.subitemid.focus();
+			});
+			return false;
+		}
+
+		server.validateExists(inputs.itemid.val(), inputs.subitemid.val(), function(exists) {
+			if (exists) {
+				alert.exists(inputs.itemid.val(), inputs.subitemid.val(), function(goEdit) {
+					if (goEdit) {
+						var uri = URI();
+						uri.setQuery('subitemID', inputs.subitemid.val());
+						window.location.href = uri.toString();
+					} else {
+						location.reload();
+					}
+				});
+			} else {
+				formSub.showDescriptions();
+			}
+		});
+	});
+
 /* =============================================================
 	Unsaved Fields Alert
 ============================================================= */
-	origForm = form.serialize();
+	origForm = formSub.form.serialize();
 
 	$("body").on("click", "a:not(#ajax-modal a, #itm-substitute-form .form_button)", function(e) {
-		if (form.serialize() !== origForm) {
+		if (formSub.form.serialize() !== origForm) {
 			e.preventDefault();
 			var a = $(this);
 			var href = a.attr('href');
 
 			alert.unsavedChanges(function(saveChanges) {
 				if (saveChanges) {
-					var validator = form.validate();
+					var validator = formSub.form.validate();
 					if (validator.form()) {
-						form.submit();
+						formSub.form.submit();
 					}
 				} else {
 					$.get('{{ page.url }}', function() {
@@ -54,8 +89,8 @@ $(function() {
 
 	$("body").on('submit', '#ajax-modal form', function(e) {
 		e.preventDefault();
-		var form = $(this);
-		var query = form.serialize();
+		var form   = $(this);
+		var query  = form.serialize();
 		var action = form.attr('action');
 		var search = form.find('input[name=q]').val();
 		var url = action + '?' + query;
@@ -71,10 +106,18 @@ $(function() {
 		modal.find('.modal-body').load(href);
 	});
 
+	$("body").on('click', '.item-link', function(e) {
+		e.preventDefault();
+		var button = $(this);
+		var modal  = button.closest('.modal');
+		$(modal.attr('data-input')).val(button.data('itemid')).change();
+		modal.modal('hide');
+	});
+
 /* =============================================================
 	Validation Methods
 ============================================================= */
-	form.validate({
+	formSub.form.validate({
 		errorClass: "is-invalid",
 		validClass: "is-valid",
 		errorPlacement: function(error, element) {
