--- a/site/templates/twig/items/itm/xrefs/substitutes/list/list.twig
+++ b/site/templates/twig/items/itm/xrefs/substitutes/list/list.twig
@@ -44,7 +44,7 @@
 							<i class="fa fa-pencil" aria-hidden="true"></i> Edit
 						</a>
 						&nbsp; &nbsp;
-						<a href="{# page.xrefDeleteUrl(item.itemid, item.custid, item.custitemid) #}" class="btn btn-danger btn-sm remove-cxm-item">
+						<a href="{{ page.subDeleteUrl(sub.itemid, sub.subitemid) }}" class="btn btn-danger btn-sm delete_button">
 							<i class="fa fa-trash" aria-hidden="true"></i> Delete
 						</a>
 					{% else %}
