--- a/site/templates/twig/items/itm/xrefs/form.twig
+++ b/site/templates/twig/items/itm/xrefs/form.twig
@@ -27,7 +27,7 @@
 		<div class="col-sm-8">
 			<div class="row">
 				<div class="col-sm-8">
-					<input type="text" class="form-control" name="upcx.primaryupc2" id="upcx.primaryupc" value="{{ xrefs.upcx.xref_primary_exists_for_itemid(item.itemid) ? xrefs.upcx.xref_primary_by_itemid(item.itemid).upc : '' }}" readonly>
+					<input type="text" class="form-control" value="{{ xrefs.upcx.xref_primary_exists_for_itemid(item.itemid) ? xrefs.upcx.xref_primary_by_itemid(item.itemid).upc : '' }}" readonly>
 				</div>
 				<div class="col-sm-4">
 					<p class="form-control-plaintext">{{ item.countItemXrefUpcs() }} Records</p>
@@ -37,16 +37,39 @@
 	</div>
 	<div class="form-group row">
 		<div class="col-sm-4">
-			<label for="supercededby">Supercede Item ID</label>
+			<label for="supercede">Supercede Item ID</label>
 		</div>
 		<div class="col-sm-8">
-			<div class="input-group">
-				<span class="input-group-prepend">
-					<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#ajax-modal" title="Search for Item" aria-label="Search for Item">
-						<span class="fa fa-search" aria-hidden="true"></span> <span class="sr-only">Search for Item</span>
-					</button>
-				</span>
-				<input type="text" class="form-control" name="supercededby" id="supercededby" value="{{ item.supercede }}"}>
+			{% include 'util/bootstrap/form/input-group.twig' with {
+					'inputgroup': {
+						'type': 'prepend',
+						'size': 'sm',
+						'input': {
+							'name': 'supercede',
+							'value': item.supercede,
+							'attributes': {
+								'placeholder': '',
+								'aria-label':  'Supercede Item ID',
+								'oninput': configIn.useUppercaseItemid() ? 'this.value = this.value.toUpperCase()' : ''
+							}
+						},
+						'button': {
+							'colorclass': 'btn-secondary',
+							'text': 'fa fa-search'|icon,
+							'attributes': {
+								'title': 'Search Items',
+								'data-toggle': 'modal',
+								'data-target': '#ajax-modal',
+								'data-lookupurl': page.search_lookupURL('items'),
+								'data-input': '#supercede'
+							}
+						}
+					}
+				}
+			%}
+			<div class="text-muted pt-2">
+				<small class="description1 form-text">{{ sub.getSubstitute().description }}</small>
+				<small class="description2 form-text">{{ sub.getSubstitute().description2 }}</small>
 			</div>
 		</div>
 	</div>
