--- a/site/templates/twig/items/itm/xrefs/js/classes/Inputs.js.twig
+++ b/site/templates/twig/items/itm/xrefs/js/classes/Inputs.js.twig
@@ -13,6 +13,6 @@ class XrefsInputs {
 		this.form = $('#' + this.id);
 		this.itemid       = this.form.find('input[name=itemID]');
 		this.supercede    = this.form.find('input[name=supercede]');
-		this.shortitemid  = this.form.find('input[name=cxm_custitemid]');
+		this.shortitemid  = this.form.find('input[name=shortitemID]');
 	}
 }
