--- a/site/templates/twig/items/itm/xrefs/form.twig
+++ b/site/templates/twig/items/itm/xrefs/form.twig
@@ -12,6 +12,7 @@
 <form action="{{ page.wire('input').url() }}" method="POST" id="itm-xrefs-form">
 	<input type="hidden" name="action" value="update-itm-xrefs">
 	<input type="hidden" name="itemID" value="{{ item.itemid }}">
+
 	<div class="form-group row">
 		<div class="col-sm-4">
 			<label for="shortitemID">Short Item ID</label>
@@ -29,6 +30,7 @@
 					}
 				}
 			%}
+			<input type="hidden" name="overwriteshort" value="false">
 		</div>
 	</div>
 	<div class="form-group row">
