--- a/site/templates/twig/items/itm/xrefs/js/classes/Inputs.js.twig
+++ b/site/templates/twig/items/itm/xrefs/js/classes/Inputs.js.twig
@@ -14,5 +14,6 @@ class XrefsInputs {
 		this.itemid       = this.form.find('input[name=itemID]');
 		this.supercede    = this.form.find('input[name=supercede]');
 		this.shortitemid  = this.form.find('input[name=shortitemID]');
+		this.overwriteshort  = this.form.find('input[name=overwriteshort]');
 	}
 }
