FEAT: add remove response alert after form change

--- a/site/templates/twig/items/itm/costing/js.twig
+++ b/site/templates/twig/items/itm/costing/js.twig
@@ -8,8 +8,8 @@ $(function() {
 	Event Changes
 ============================================================= */
 	$('body').on('keyup change paste', '#' + formCosting.id +' input, select, textarea', function(){
-		if ($('#response-alert').length) {
-			$('#response-alert').remove();
+		if ($('.response-alert').length) {
+			$('.response-alert').remove();
 		}
 	});
 
