--- a/site/templates/twig/items/itm/pricing/js.twig
+++ b/site/templates/twig/items/itm/pricing/js.twig
@@ -9,13 +9,12 @@ $(function() {
 	var formPricing = PricingForm.getInstance();
 	var alert       = PricingAlerts.getInstance();
 
-
 /* =============================================================
 	Events
 ============================================================= */
 	$('body').on('keyup change paste', '#' + formPricing.id +' input, select, textarea', function(){
-		if ($('#response-alert').length) {
-			$('#response-alert').remove();
+		if ($('.response-alert').length) {
+			$('.response-alert').remove();
 		}
 	});
 
