--- a/site/templates/twig/customers/ci/credit/credit.twig
+++ b/site/templates/twig/customers/ci/credit/credit.twig
@@ -20,15 +20,27 @@
 		</table>
 	</div>
 </div>
-<div class="row">
-	<div class="col-sm-6">
-		<table class="table table-striped table-bordered table-sm">
-			{% for key, column in json['columns']['notes'] %}
-				<tr>
-					<td class="font-weight-bold {{ module_json.get_justifyclass(column['headingjustify']) }}">{{ column['heading']}}</td>
-					<td class="{{ module_json.get_justifyclass(column['datajustify']) }}">{{ json['data']['notes'][key] }}</td>
-				</tr>
-			{% endfor %}
-		</table>
-	</div>
+
+<div class="card-body">
+	<h3 class="text-center">Notes</h3>
 </div>
+<table class="table table-striped table-bordered table-sm">
+	<thead>
+		<tr>
+			{% for key, column in json['columns']['notes'] %}
+				<th class="font-weight-bold {{ module_json.get_justifyclass(column['headingjustify']) }}">
+					{{ column['heading']}}
+				</th>
+			{% endfor %}
+		</tr>
+	</thead>
+	<tbody>
+		{% for note in json['data']['notes'] %}
+			{% for key, column in json['columns']['notes'] %}
+				<td class="{{ module_json.get_justifyclass(column['datajustify']) }}">
+					{{ note[key] }}
+				</td>
+			{% endfor %}
+		{% endfor %}
+	</tbody>
+</table>
