--- a/site/templates/twig/customers/ci/customer/header.twig
+++ b/site/templates/twig/customers/ci/customer/header.twig
@@ -6,11 +6,13 @@
 		{% include 'customers/ci/customer/ar-data.twig' %}
 	</div>
 	<div class="col-sm-6">
-		<div class="text-center form-group">
-			<a href="{{ page.page.cartCustomerUrl(customer.id) }}" class="btn btn-dark">
-				<i class="fa fa-shopping-cart" aria-hidden="true"></i> Order Entry
-			</a>
-		</div>
+		{% if pages.get('pw_template=cart').isHidden() == false %}
+			<div class="text-center form-group">
+				<a href="{{ page.cartCustomerUrl(customer.id) }}" class="btn btn-dark">
+					<i class="fa fa-shopping-cart" aria-hidden="true"></i> Order Entry
+				</a>
+			</div>
+		{% endif %}
 		{% include 'customers/ci/customer/activity.twig' %}
 	</div>
 </div>
