--- a/site/templates/twig/cart/test/lookup/js/classes/Alerts.js.twig
+++ b/site/templates/twig/cart/test/lookup/js/classes/Alerts.js.twig
@@ -8,4 +8,23 @@ class LookupAlerts extends Alerts {
 		return this.instance;
 	}
 
+	itemNotFound(itemid, callback) {
+		swal2.fire({
+			title: 'Item not found.',
+			text: itemid + ' cannot be found.',
+			icon: 'warning',
+			showCancelButton: true,
+			confirmButtonText: 'Make advanced search?',
+			cancelButtonText: 'No',
+		}).then(function (result) {
+			if (result.value) {
+				callback(result.value);
+				return true;
+			} else {
+				callback(false);
+				return false;
+			}
+		});
+	}
+
 }
