--- a/site/templates/twig/items/itm/js.twig
+++ b/site/templates/twig/items/itm/js.twig
@@ -15,8 +15,8 @@ $(function() {
 	Unsaved Fields Alert
 ============================================================= */
 	$('body').on('keyup change paste', '#' + formItm.id +' input, select, textarea', function(){
-		if ($('#response-alert').length) {
-			$('#response-alert').remove();
+		if ($('.response-alert').length) {
+			$('.response-alert').remove();
 		}
 	});
 
