--- a/site/templates/twig/items/itm/xrefs/bom/component/form.twig
+++ b/site/templates/twig/items/itm/xrefs/bom/component/form.twig
@@ -130,4 +130,27 @@
 			%}
 		</div>
 	</div>
+
+	<div class="d-flex justify-content-between align-items-center">
+		{#
+			Only show Edit Actions if the Item is
+			1. Locked for editing by the User
+			2. Is a new Item
+			NOTE: Only show delete if item already exists.
+		#}
+		{% if bmm.recordlocker.userHasLocked(bomItem.itemid) %}
+			<button type="submit" class="btn btn-success">
+				<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
+			</button>
+
+			{% if component.isNew() == false %}
+				<a href="{{ page.bomComponentDeleteUrl(bomItem.itemid, component.itemid) }}" class="btn btn-danger delete_button">
+					<i class="fa fa-trash" aria-hidden="true"></i> Delete
+				</a>
+			{% endif %}
+		{% endif %}
+		<a href="{{ page.bomComponentExitUrl(bomItem.itemid, component.itemid) }}" class="btn btn-warning">
+			<i class="fa fa-times" aria-hidden="true"></i> Close
+		</a>
+	</div>
 </form>
