--- a/site/templates/twig/items/itm/display.twig
+++ b/site/templates/twig/items/itm/display.twig
@@ -1,4 +1,4 @@
-{% set configIn = itm.configIn() %}
+{% set configIn = page.wire('modules').get('Dconfigs').config('in') %}
 
 <div class="card mb-5">
 	{% block header %}
